# TinyCloud

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  file_storage_service  file_storage_service.cpp  http_server  http_server.cpp  http_server.h  http_server_grpc.h  index.html  master_server  master_server.cpp  master_server.h  storage_server  storage_server.cpp  text.txt
_site/: admin.html  drive.html  index-login.html  index.html  profile.html  register.html  test_server.py  webmail.html
_site/css/: main.css
_site/download_test/: lecture18.pptx  profile.html
grpc_backend/: BigTabler  BigTabler.cpp  BigTabler.h  Indexer  Indexer.cpp  Indexer.h  Makefile  backend.grpc.pb.cc  backend.grpc.pb.h  backend.pb.cc  backend.pb.h  backend.proto  backend_client  backend_client.cpp  backend_client.h  backend_replicar  backend_replicar.cpp  backend_server  backend_server.cc  backend_server.cpp  file1.txt  file2.txt  file_wu.cpp  filelist_wu.cpp  primary_log.txt  run-fs.sh  storage_server
grpc_backend/exe1/: backend_replicar  backend_server
grpc_backend/exe2/: backend_replicar  backend_server
grpc_backend/protos/: backend.proto
grpc_master/: Makefile  MasterNode  MasterNode.cpp  MasterNode.h  crash_checkpoint.txt  master.grpc.pb.cc  master.grpc.pb.h  master.pb.cc  master.pb.h  master_client  master_client.cpp  master_client.h  master_config.txt  master_log_file.txt  master_server  master_server.cpp  user_checkpoint.txt
grpc_master/protos/: master.proto
